syntax = "proto3";

package linuxcnc.status;

option java_package = "ro.dragossusi.proto.linuxcnc.status";
option java_multiple_files = true;

import "proto/status/tool/tool.proto";
import "proto/status/coolant/coolant.proto";
import "proto/status/aux/aux.proto";
import "proto/status/lube/lube.proto";

message IoStatus {
  double cycle_time = 1;
  /**
   * Not sure what this is
   */
  int32 reason = 2;
  int32 fault = 3;
  ToolStatus tool_status = 4;
  CoolantStatus coolant_status = 5;
  AuxStatus aux_status = 6;
  LubeStatus lube_status = 7;
}