syntax = "proto3";

package linuxcnc.status;

option java_package = "ro.dragossusi.proto.linuxcnc.status";
option java_multiple_files = true;

message ToolStatus {
  /** idx ready for loading from */
  int32 pocket_prepared = 1;
  /** Tool loaded, 0 is no tool. */
  int32 tool_in_spindle = 2;
  /** Tool was loaded from this pocket. */
  int32 tool_from_pocket = 3;
}